wip - remove unecessary code

--- a/Perfect Launcher/Global.resx
+++ b/Perfect Launcher/Global.resx
@@ -119,9 +119,7 @@
   </resheader>
   <data name="label1.Text" xml:space="preserve">
     <value>O programa é totalmente gratúito, MAAAS, caso você queira me ajudar de alguma maneira,
-você pode enviar um correio apartir de 5KK para a conta CHATGLOBAL (em qualquer servidor LUG) e deixar uma mensagem.
-Ela será exibida aqui para todas as pessoas lerem! (mensagens ofensivas serão ignoradas)
-[ÚLTIMAS MENSAGENS]</value>
+você pode enviar Pix de qualquer valor. Chave Pix E-mail: "felipenogueirap7@gmail.com"</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
