--- a/Perfect Launcher/Combo.resx
+++ b/Perfect Launcher/Combo.resx
@@ -117,18 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAATRJREFUSEtj
-        GAXDE0RFRQmGhoaKQrm0A9HR0XeB+AvQwlioEG0A0JL/SHgt0Hf8UCnqAjSL/sfExFyMiIiQgkpTD6Bb
-        BMUPgRaqQ5WQDBgTEhIkgIboArEbKE6AhhUhGY6OnwKxFlQvbhAbG2sOVLgRiE8C8RMg/g3E2AzEh5+F
-        h4crQ43EDoCKdqJpIhffB2IZqLGYACj5EkkxRRiUQKDGYgKggjfoGijAD6DGYgJgZO/FooEc/AkU31Bj
-        MUFkZKQvUNEvNE2k4q9AB9tBjcQN0tLSWIGu0QSGsQNQUzgQ5wI11gD53UB6NpBehWQoOv4KlHeFGkU5
-        wGIBCL8GOtAEqoQ6AIslL4FFkCFUmnoA2RJgcO6iWZUBtOAtEP8DxkcfKE6hwtQHwNSphzf5joIhCBgY
-        AOYLdNMkt+z8AAAAAElFTkSuQmCC
-</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="button1.Image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\button1.Image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAThJREFUSEtj
@@ -196,9 +189,9 @@
         NJLDgJXYZfr31j+FbzlPVySHAU/9iKA1mn/md46V3ZaUgkzmD+df836OQVevAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <data name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>17, 17</value>
-  </metadata>
+  </data>
   <data name="button12.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAcdJREFUSEu1
@@ -212,17 +205,8 @@
         dMhPmGOryTFjfXq6taJBHq5ghZl36nALlcl8Auqy7mUYGUvTAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="button15.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAY9JREFUSEvt
-        lrtKxFAQhoOCIlrZCWrjrRbR3jIPEBJy6230FQJ2gu9gLbvqA/gGvoC9pbioLHai/xwmMjmZnJyFbOfA
-        t5k9c/lzLtlNQFaW5XaapqMsy17Bz0BQr3EcxztGJEmSLQy8iYShod6bAT7GYnAu5Hl+S0KfdqALzP4Q
-        S3xEPq73uD7IuIN3EtICKmatYeRHUbQUhuGyndNFr5CcBeuYGna9b7Q3kfu1mrNrfHkzXQwixK6z17+Q
-        MZffhbcQNjtit2FyXKuvaQVReI1nZAVP84VJmMHsXpJWECLrXEexG3a9zO4l0WZ0xnUBRNfY9TK7l0QL
-        TvG3sc+1M5nS6w81iFk90W8Z13sZ8he1XjWdd0GHgnt4GQ7PhtanxjXdb4idcp9eQ/6xVd/Aua7gRZ5C
-        lyH30qpt0CdEPBZFscr9VEMOzWYqalr4CBHPWMZz7MNuVVUL1JyOPsZOELsCXyJXhYQ+7ME5YP7K76zB
-        wcHMR3QsD/BlYgcHZAKhPbOZ4gXS+43IA9oSfoEMgl8PQwoW7eNWpAAAAABJRU5ErkJggg==
-</value>
+  <data name="button15.BackgroundImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\button15.BackgroundImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="button13.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
